syntax = "proto3";

package api.todo.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

option go_package = "api/todo/v1;v1";

service TodoService {
  rpc CreateTodo(CreateTodoReq) returns (CreateTodoReply){}
  rpc UpdateTodo(UpdateTodoReq) returns (UpdateTodoReply){}
  rpc ListTodo(ListTodoReq) returns (ListTodoReply){}
}

message Todo {
  int64 id = 1;
  string title = 2;
  string detail = 3;
  google.protobuf.Timestamp deadline = 4;
  int32 status = 5;
}

message CreateTodoReq {
  Todo todo = 1;
}

message CreateTodoReply {}

message UpdateTodoReq {
  Todo todo = 1;
  google.protobuf.FieldMask mask = 2;
}

message UpdateTodoReply {
  Todo todo = 1;
}

message ListTodoReq {

}

message ListTodoReply {
  repeated Todo results = 1;
}